--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ nav ul a {
   padding: 0 3px;
 }
 
+nav ul li:last-child a {
+  padding: 0;
+}
+
 /* Main content */
 main {
   border-bottom: 2px solid #ff6600;
